# conda-env-spec-v2

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
conda_env_spec_v2/: __init__.py  apply.py  cli.py  constants.py  edit.py  exceptions.py  plugin.py  spec.py
docs/: cli.md  conf.py  index.md  quickstart.md  robots.txt  why.md
recipe/: meta.yaml
tests/: conftest.py  test_cli.py  test_spec.py
tests/data/: simple.toml
