[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-env-spec-v2"
description = "A V2 environment spec for conda."
readme = "README.md"
authors = [
  { name = "Peyton Murray", email = "peynmurray@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = [
  # "conda >=23.9.0",
  "tomli>=2.0.1;python_version<'3.11'",
  "tomli-w",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/conda-incubator/conda-env-spec-v2"

[project.entry-points.conda]
conda-declarative = "conda_env_spec_v2.plugin"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
source = ["conda_env_spec_v2/", "tests/"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8 naming
    "N",
    # pydocstyle
    "D",
    # annotations
    "ANN",
    # debugger
    "T10",
    # flake8-pytest
    "PT",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-fixme
    "FIX",
    # flake8-eradicate
    "ERA",
    # pandas-vet
    "PD",
    # numpy-specific rules
    "NPY",
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D211", # No blank line before class
    "D213", # Multiline summary second line
    "PD901", # Avoid using 'df' for pandas dataframes. Perfectly fine in functions with limited scope
    "ANN101", # Missing type annotation for `self`
    "ANN204", # Missing return type annotation for special method
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line before after class docstring
    "D204", # 1 blank line required after class docstring
    "D413", # 1 blank line after parameters
    "SIM108", # Simplify if/else to one line; not always clearer
    "D206", # Advised to disable by ruff-format
    "E501", # Advised to disable by ruff-format
    "W191", # Advised to disable by ruff-format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
]
"test_*.py" = [
    "ANN001", # Type annotations aren't needed for tests; these are fixtures or parametrizations
    "ANN201" # Ignore return type annotations
]
